--- a/app/assets/stylesheets/components/slider_controls.scss
+++ b/app/assets/stylesheets/components/slider_controls.scss
@@ -19,7 +19,9 @@
       background: rgba(black, 0.6);
       font-size: 1.2rem;
       color: white;
-      transition: font-size 0.2s;
+      transition: font-size 0.1s;
+
+      cursor: pointer;
 
       i {
         opacity: 0;
